ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/Retry_Count__c.object-meta.xml
<CustomObject>
    <label>Retry Count</label>
    <nameField>
        <displayFormat>Ret-{000000}</displayFormat>
        <label>Retry Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retry Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>