ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>Retry_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>