ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/fields/Customer_Dedupe__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dedupe__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Customer Dedupe</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>