ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/fields/Field_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Field_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Investigation</label>
    <referenceTo>Field_Investigation__c</referenceTo>
    <relationshipLabel>Retry Counts</relationshipLabel>
    <relationshipName>Retry_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>