ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/fields/IsAPIFailed__c.field-meta.xml
<CustomField>
    <fullName>IsAPIFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAPIFailed</label>
    <type>Checkbox</type>
</CustomField>