ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/fields/Loan_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Id__c</fullName>
    <label>Loan Application Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Retry_Count</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>