ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Retry_Counts1</relationshipName>
    <type>Lookup</type>
</CustomField>