ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/fields/Vehicle_Detail__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Detail</label>
    <referenceTo>Vehicle_Detail__c</referenceTo>
    <relationshipLabel>Retry Counts</relationshipLabel>
    <relationshipName>Retry_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>