ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Application_Id__c</field>
        <operation>equals</operation>
        <value>L02062204240</value>
    </filters>
    <label>All</label>
</ListView>