ProdIND/ProdPrograms/force-app/main/default/objects/Retry_Count__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Name__c</field>
        <operation>contains</operation>
        <value>Bureau Pull Attempts</value>
    </filters>
    <filters>
        <field>Count__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>All</label>
</ListView>